Contact web bilanguage

--- a/cat/contacto.html
+++ b/cat/contacto.html
@@ -47,7 +47,7 @@
 				</ul>
 			</div>
 			<div class="small-4 columns right content-area">
-				<a href="http://www.mundoludic.com/login/" class="btn-area">Área proveedores</a>
+				<a href="http://www.mundoludic.com/login/" class="btn-area">Àrea proveïdors</a>
 			</div>
 
 		</div>
@@ -73,13 +73,13 @@
 		<div class="row" id="contacto">
 
 			<div class="large-12 columns">
-				<h6>Si quieres contactar con nosotros, envíanos por favor un correo a <a href="mailto:info@mundoludic.com">info@mundoludic.com</a>, y en breve te responderemos.</h6><br>
-				<p>Déjanos tu teléfono de contacto si quieres que te llamemos:</p>
+				<h6>Si vols contactar amb nosaltres, envia'ns si us plau un correu a <a href="mailto:info@mundoludic.com">info@mundoludic.com</a>, i en breu et donarem resposta.</h6><br>
+				<p>Deixa'ns el teu telèfon de contacte si vols que et truquem:</p>
 				<!-- Form contacto -->
 				<form class="small-4 columns" action="http://www.mundoludic.com/php/contacto.php" id="contactForm">
-					<label>Nombre</label>
+					<label>Nom</label>
 					<input id="nombre" type="text" name="nombre" placeholder="Escribe tu nombre" minlength="3" maxlength="30" required>
-					<label>Teléfono</label>
+					<label>Telèfon</label>
 					<input id="telefono" type="text" name="telefono" placeholder="Número de contacto" minlength="9" maxlength="15" required>
 					<input type="submit" class="button" value="Enviar" id="enviar">
 				</form>
@@ -91,7 +91,7 @@
 			<div class="panel small-10 large-centered columns">
 				<h6>MUNDO LUDIC, EDUCACIÓ, CULTURA I LLEURE SL.</h6>
 				<p>CIF: B66136425<br>
-				Inscrito en el Registro Mercantil de Barcelona el 14/10/2013<p>
+				Inscrit al Registre Mercantil de Barcelona el 14/10/2013<p>
 			</div>
 		</div>
 
@@ -133,7 +133,7 @@
 			</div>
 		<div class="row">
 			<div class="large-12 columns center modal-title">
-				<h6>Gracias! Nos pondremos en contacto lo antes posible.</h6>
+				<h6>Gràcies! Ens posarem en contacte amb tu el més aviat possible.</h6>
 			</div>
 		</div>
 
@@ -148,7 +148,7 @@
 			</div>
 		<div class="row">
 			<div class="large-12 columns center modal-title">
-				<h6>Ha pasado algo inesperado! Por favor, si pasa de nuevo, contacta con <a href="mailto:soporte@mundoludic.com">soporte@mundoludic.com</a></h6>
+				<h6>Ha passat quelcom inesperat! Si us plau, si passa de nou, contacta amb <a href="mailto:soporte@mundoludic.com">soporte@mundoludic.com</a></h6>
 			</div>
 		</div>
 
