--- a/cat/index.html
+++ b/cat/index.html
@@ -146,6 +146,13 @@
 			</div>
 
 			<div class="row">
+				<div class="large-12 columns center">
+					<a href="contacto.html" class="button">Contacte</a>
+					<br>
+				</div>
+			</div>
+
+			<div class="row">
 			  <div class="large-12 columns">
 			  		<div class="small-6 columns copy">
 			  	<h7>&copy;&nbsp;Mundo Ludic</h7>
