algun cambio en la usabilidad

--- a/cas/contacto.html
+++ b/cas/contacto.html
@@ -42,12 +42,12 @@
 
 			<div class="small-4 columns left idioma">
 				<ul>
-					<li>Castellano</li>&nbsp;/&nbsp;
-					<li><a href="../cat/">Català</a></li>
+					<li>&nbsp;</li>
+					<li>&nbsp;</li>
 				</ul>
 			</div>
 			<div class="small-4 columns right content-area">
-				<a href="http://www.mundoludic.com/login/" class="btn-area">Área proveedores</a>
+				<a href="http://www.mundoludic.com/login/" class="btn-area" target="_blank">Área proveedores</a>
 			</div>
 
 		</div>
