--- a/cas/index.html
+++ b/cas/index.html
@@ -44,7 +44,7 @@
 				</ul>
 			</div>
 			<div class="small-4 columns right content-area">
-				<a href="http://www.mundoludic.com/login/" class="btn-area">Área proveedores</a>
+				<a href="http://www.mundoludic.com/login/" class="btn-area" target="_blank">Área proveedores</a>
 			</div>
 
 		</div>
