--- a/cat/index.html
+++ b/cat/index.html
@@ -32,7 +32,7 @@
 				</ul>
 			</div>
 			<div class="small-6 columns right content-area">
-				<a href="http://www.mundoludic.com/login/" class="btn-area">Àrea proveïdors</a>
+				<a href="http://www.mundoludic.com/login/" class="btn-area" target="_blank">Àrea proveïdors</a>
 			</div>
 
 		</div>
