--- a/cat/contacto.html
+++ b/cat/contacto.html
@@ -42,19 +42,19 @@
 
 			<div class="small-4 columns left idioma">
 				<ul>
-					<li>Castellano</li>&nbsp;/&nbsp;
-					<li><a href="../cat/">Català</a></li>
+					<li>&nbsp;</li>
+					<li>&nbsp;</li>
 				</ul>
 			</div>
 			<div class="small-4 columns right content-area">
-				<a href="http://www.mundoludic.com/login/" class="btn-area">Àrea proveïdors</a>
+				<a href="http://www.mundoludic.com/login/" class="btn-area" target="_blank">Àrea proveïdors</a>
 			</div>
 
 		</div>
 
 		<div class="row">
 			<div class="large-12 columns center">
-				<a href=""><img class="logo" src="../images/logo-empty.png"></a>
+				<a href="http://www.mundoludic.com"><img class="logo" src="../images/logo-empty.png"></a>
 			</div>
 		</div>
 		<br>
@@ -71,6 +71,10 @@
 	<div class=" large-12 columns main">
 
 		<div class="row" id="contacto">
+
+			<div class="large-12 columns">
+				<a href="http://www.mundoludic.com">Home</a> > Contacto<br>
+			</div>
 
 			<div class="large-12 columns">
 				<h6>Si vols contactar amb nosaltres, envia'ns si us plau un correu a <a href="mailto:info@mundoludic.com">info@mundoludic.com</a>, i en breu et donarem resposta.</h6><br>
