añadir top-bar con el link al blog

--- a/cas/index.html
+++ b/cas/index.html
@@ -23,17 +23,21 @@
 
 	<div id="header">
 
-<!-- 			<nav class="top-bar">
+			<nav class="top-bar">
 				<div class="row">
 					<div class="large-10 large-offset-1 columns" id="menu">
 					<ul class="title-area">
 						<li class="name">
-							<h1><a href="#">Mundo Ludic</a></h1>
+							<a href="http://www.mundoludic.com/cas/"><img src="../images/icons/logoTopBarColor.png"></a>
 						</li>
 					</ul>
+					<ul class="nav navbar-nav">
+				        <li><a href="http://www.mundoludic.com/cas/">Mundo Ludic</a></li>
+				        <li><a href="http://www.mundoludic.com/blog/es/">Blog</a></li>
+				      </ul>
 					</div>
 				</div>
-			</nav> -->
+			</nav>
 
 		<div class="row">
 
