--- a/cat/index.html
+++ b/cat/index.html
@@ -23,6 +23,22 @@
 
 	<div id="header">
 
+			<nav class="top-bar">
+				<div class="row">
+					<div class="large-10 large-offset-1 columns" id="menu">
+					<ul class="title-area">
+						<li class="name">
+							<a href="http://www.mundoludic.com/cat/"><img src="../images/icons/logoTopBarColor.png"></a>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav">
+				        <li><a href="http://www.mundoludic.com/cat/">Mundo Ludic</a></li>
+				        <li><a href="http://www.mundoludic.com/blog/ca/">Blog</a></li>
+				      </ul>
+					</div>
+				</div>
+			</nav>
+
 		<div class="row">
 
 			<div class="small-6 columns left idioma">
